[themes] [connect] [opt-in] Fixed the height of the opt-in form so that the vertical scrollbar will appear when needed.

--- a/assets/scss/admin/connect.scss
+++ b/assets/scss/admin/connect.scss
@@ -407,11 +407,20 @@ $form_width: 480px;
 
 #fs_theme_connect_wrapper {
     position: fixed;
-    top: 32px;
+    top: 0;
     height: 100%;
     width: 100%;
     z-index: 99990;
     background: rgba(0, 0, 0, 0.75);
+    text-align: center;
+    overflow-y: auto;
+
+    &:before {
+        content: "";
+        display: inline-block;
+        vertical-align: middle;
+        height: 100%;
+    }
 
     > button.close {
         color: white;
@@ -425,9 +434,12 @@ $form_width: 480px;
     }
 
     #fs_connect {
-        position: relative;
-        top: 10%;
-        margin: auto;
+        top: 0;
+        text-align: left;
+        display: inline-block;
+        vertical-align: middle;
+        margin-top: 52px;
+        margin-bottom: 20px;
 
         .fs-terms
         {
